# electro-vision-backend

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  api-response.json  diesel.toml  docker-compose.yml  launch-and-update.sh  migration-script.sh  schema-down.sql  schema-up.sql
migrations/2024-06-24-142638_authentication/: down.sql  up.sql
migrations/2024-06-26-194423_auth/: down.sql  up.sql
migrations/2024-06-27-172641_auth/: down.sql  up.sql
migrations/2025-02-21-125727_users/: up.sql
migrations/2025-03-01-153018_users/: down.sql  up.sql
migrations/2025-04-15-093720_users/: down.sql  up.sql
migrations/2025-04-19-122552_users/: down.sql  up.sql
migrations/2025-04-21-153113_users/: up.sql
src/: constants.rs  db_models.rs  db_utils.rs  emails.rs  endpoints.rs  lib.rs  main.rs  models.rs  models_insertable.rs  multimedia_handler.rs  response.rs  response_handler.rs  schema.rs  services.rs  user.rs
src/auth/: auth_error.rs  find_user.rs  hash_password.rs  hash_password_tests.rs  login.rs  mod.rs  register.rs  resend_verification_email.rs  reset_assword.rs  reset_password.rs  response_user.rs  user_with_roles.rs  validate_account.rs  verify_session.rs
src/auth/confirmation_token/: mod.rs  test.rs  token.rs
src/auth/full_user/: delete.rs  read.rs  register.rs  update.rs
src/auth/jwt/: claims.rs  decoding.rs  generation.rs  mod.rs  mod.rs~  test.rs  verify.rs
src/auth/login/: login.rs  mod.rs  (+1 more)
src/buisness_logic/: add_user_to_workspace.rs  create_workspace.rs  list_workspace_users.rs  mod.rs  workspace.rs  workspace_invitation.rs
(+29 files in other folders)
