[package]
name = "morning-compass-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
dotenv = "0.15"
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.2.1", features = ["postgres", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_with = "3.8.1"
dotenvy = "0.15"
