[package]
name = "morning_compass_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-web = "4"
dotenv = "0.15"
chrono = {version = "0.4.38", features = ["serde"]}
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_with = "3.8.1"
dotenvy = "0.15"
env_logger = "0.9"
bcrypt = "0.12"
serde_json = "1.0.117"
jsonwebtoken = "9"
lettre = "0.10"
lettre_email="0.9"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
libpq = "4.1.0"
